const mongoose = require('mongoose');
const bcrypt = require('bcryptjs');
const jwt = require('jsonwebtoken');

const TherapistSchema = new mongoose.Schema({
    name: {
        type: String,
        required: [true, 'Please add a name']
    },
    gender : {
        type: String,
        required: [true, 'Please select a gender'],
        enum: ['male', 'female']
    },
    phoneNumber: {
        type: String,
        required: [true, 'Please add a phone number'],
        unique: true
    },
    experience : {
        type: Number,
        required: [true, 'Please add an experience (year)']
    },
    specialities : {
        type: String,
        required: [true, 'Please add a specialities']
    },
    state : {
        type: String,
        enum: ['pending', 'verified', 'rejected'],
        default: 'pending'
    },
    role: {
        type: String,
        enum: ['user', 'admin', 'therapist'],
        default: 'therapist'
    },
    email: {
        type: String,
        required: [true, 'Please add an email'],
        unique: true,
        match: [
            /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
            'Please add a valid email'
        ]
    },
    password: {
        type: String,
        required: [true, 'Please add a password'],
        minlength: 6,
        select: false
    },
    resetPasswordToken: String,
    resetPasswordExpire: Date,
    createdAt: {
        type: Date,
        default: Date.now
    },
    workingInfo: [{
        massageShopID: {
            type: mongoose.Schema.Types.ObjectId,
            ref: 'MassageShop',
            validate: {
                validator: async function(value) {
                  const shop = await mongoose.model('MassageShop').findById(value);
                  return !!shop;
                },
                message: 'Massage shop not found'
              }
        },
        massageShop_name: {
            type: String,
        }
    }],
    notAvailableDate: [{
        date: {
            type: String,
        }
    }]
});

TherapistSchema.pre('save', async function (next) {
    const salt = await bcrypt.genSalt(10);
    this.password = await bcrypt.hash(this.password, salt);
});

TherapistSchema.methods.getSignedJwtToken = function () {
    return jwt.sign({ id: this._id }, process.env.JWT_SECRET, {
        expiresIn: process.env.JWT_EXPIRE
    });
}

TherapistSchema.methods.matchPassword = async function (enteredPassword) {
    return await bcrypt.compare(enteredPassword, this.password);
}

module.exports = mongoose.model('Therapist', TherapistSchema);
